--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^2.0.0
+  animated_splash: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_svg: ^0.17.4
 
 dev_dependencies:
   flutter_test:
@@ -46,9 +48,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+assets:
+  - images/group.png
+  - images/girl.png
+  - images/caution.png
+  #   - images/logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
