--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   carousel_slider: ^2.0.0
   animated_splash: ^1.0.0
+  location: ^3.0.0
+  provider: ^4.1.3
+  permission_handler: ^5.0.0+hotfix.9
 
 
   # The following adds the Cupertino Icons font to your application.
